[package]
name = "pass-rs"
description = "A simple password manager written in Rust"
version = "0.1.0"
edition = "2021"
authors = ["Sabu Siyad", "Sabu Siyad <hello@ssiyad.com>"]

[workspace]
members = [".", "config", "create", "edit", "gpg", "list", "pwgen", "setup", "show"]

[dependencies]
config = { path = "config" }
create = { path = "create" }
edit = { path = "edit" }
list = { path = "list" }
pwgen = { path = "pwgen" }
setup = { path = "setup" }
show = { path = "show" }
