[package]
name = "pass-rs"
description = "Simple password manager, written in Rust"
version = "0.2.0"
edition = "2021"
authors = ["Sabu Siyad", "Sabu Siyad <hello@ssiyad.com>"]

[dependencies]
base32 = "0.4.0"
clap = { version = "4.5.3", features = ["derive", "cargo"] }
cli-clipboard = "0.4.0"
crossterm = "0.27.0"
gpgme = "0.11.0"
hmac = "0.12.1"
ignore = "0.4.22"
inquire = "0.7.2"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["serde_derive"] }
sha1 = "0.10.6"
tempfile = "3.10.1"
toml = "0.8.12"
